<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    android:orientation="vertical"
    tools:context=".MyCalendarActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FEFEFE"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="422dp"
            android:layout_height="81dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:onClick="previousMonthAction"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/obratno"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/monthYearTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="Декабрь 2022"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:onClick="nextMonthAction"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/tuda"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:background="@drawable/custom_white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Pn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Vt"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sr"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Cht"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Pt"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sb"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Vs"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:text="TextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="343dp">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="95dp"
                android:layout_height="41dp"
                android:layout_marginStart="158dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="158dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_1"
                android:gravity="center"
                android:onClick="toMainActivity"
                android:text="Главный экран"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>