<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_plan_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/random"
    tools:context=".NewPlanActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:layout_constraintTop_toBottomOf="@+id/time_textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/date_textView"
        app:layout_constraintStart_toStartOf="@+id/date_textView"
        app:layout_constraintTop_toBottomOf="@+id/date_textView" />

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="410dp"
        android:layout_height="236dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/custom_1"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colorButtonCancel"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cancel_button"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <RelativeLayout
        android:id="@+id/relativeLayoutUnderButtonCancel"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:alpha="0.6"
        app:layout_constraintEnd_toEndOf="@+id/colorButtonCancel"
        app:layout_constraintStart_toStartOf="@+id/colorButtonCancel"
        app:layout_constraintTop_toTopOf="@+id/colorButtonCancel">

    </RelativeLayout>

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:onClick="onCancelClick"
        android:shadowColor="@color/beige"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textColorHighlight="@color/beige"
        android:textColorHint="@color/beige"
        android:textColorLink="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_textView"
        app:layout_constraintVertical_bias="0.49"
        app:rippleColor="@color/beige"
        app:strokeColor="@color/beige" />

    <TextView
        android:id="@+id/textView"
        android:shadowColor="@color/white"
        android:shadowRadius="50"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/new_plan1"
        android:textAlignment="gravity"
        android:textColor="#64A7B1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"

        android:shadowColor="@color/white"
        android:shadowRadius="50"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginTop="124dp"
        android:text="@string/new_plan3"
        android:textAlignment="gravity"
        android:textColor="#C687AB"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:shadowColor="@color/white"
        android:shadowRadius="50"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginTop="72dp"
        android:text="@string/new_plan2"
        android:textAlignment="gravity"
        android:textColor="#F1CE89"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/write_new_plan_editText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/new_plan_write"
        android:inputType="textPersonName"
        android:scrollbarStyle="insideInset"
        android:textAlignment="gravity"
        android:textDirection="firstStrongRtl"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:gravity="clip_vertical|left|center_vertical|end"
        android:hint="@string/date"
        android:onClick="onDateClick"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_new_plan_editText"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:gravity="left|center_vertical"
        android:hint="@string/time"
        android:onClick="onTimeClick"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_textView"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/colorButtonAdd"
        android:layout_width="108dp"
        android:layout_height="49dp"
        android:background="@drawable/blue_background_solid"
        app:layout_constraintStart_toStartOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="@+id/add_button" />

    <Button
        android:id="@+id/add_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:onClick="onAddClick"
        android:shadowColor="@color/beige"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textColorHighlight="@color/beige"
        android:textColorHint="@color/beige"
        android:textColorLink="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_textView"
        app:layout_constraintVertical_bias="0.49"
        app:rippleColor="@color/beige"
        app:strokeColor="@color/beige" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/write_new_plan_editText"
        app:layout_constraintStart_toStartOf="@+id/write_new_plan_editText"
        app:layout_constraintTop_toBottomOf="@+id/write_new_plan_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>