<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE"
    tools:context=".WeekCalendarActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_"
        android:layout_width="418dp"
        android:layout_height="276dp"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="680dp"
        android:background="#FEFEFE"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="227dp"
            android:background="@drawable/custom_white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@null"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="previousWeekAction"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/obratno"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/monthYearTV"
                    android:layout_width="0dp"
                    android:layout_height="63dp"
                    android:layout_weight="2"
                    android:onClick="onMonthClick"
                    android:text="Декабрь 2022"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:onClick="nextWeekAction"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tuda"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Pn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Vt"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sr"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Cht"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Pt"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Sb"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Vs"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:text="TextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="94dp"
                android:layout_weight="1">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="414dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="5"
                android:orientation="horizontal"></LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="409dp"
                android:layout_height="329dp"
                android:layout_weight="5"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="158dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="158dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_1"
                android:gravity="center"
                android:onClick="toMainActivity"
                android:text="Главный экран"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>